--- a/Vidly/Views/Rentals/New.cshtml
+++ b/Vidly/Views/Rentals/New.cshtml
@@ -6,15 +6,25 @@
 
 <h2>New Rental Form</h2>
 
-<form>
+<form id="newRental">
     <div class="form-group">
         <label>Customer</label>
-        <input id="customer" type="text" value="" class="form-control" />
+        <div class="tt-container">
+            <input id="customer" type="text" value="" class="form-control" />
+        </div>
     </div>
 
     <div class="form-group">
         <label>Movie</label>
-        <input id="movie" type="text" value="" class="form-control" />
+        <div class="tt-container">
+            <input id="movie" type="text" value="" class="form-control" />
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-4 col-sm-4">
+            <ul id="movies" class="list-group"></ul>
+        </div>
     </div>
 
     <button class="btn btn-primary">Submit</button>
@@ -25,7 +35,9 @@
     <script>
         $(document).ready(function () {
 
-            var vm = {}
+            var vm = {
+                movieIds: []
+            }
 
             var customers = new Bloodhound({
                 datumTokenizer: Bloodhound.tokenizers.obj.whitespace('name'),
@@ -64,8 +76,29 @@
                 display: 'name',
                 source: movies
             }).on("typeahead:select", function (e, movie) {
-                console.log(movie.id);
+                vm.movieId = movie.id;
+                $("#movies").append("<li class='list-group-item'>" + movie.name + "</li>");
+
+                $("#movie").typeahead("val", "");
+
+                vm.movieIds.push(movie.id);
             });
+
+            $("#newRental").submit(function (e) {
+                e.preventDefault();
+
+                $.ajax({
+                    url: "/api/newRentals",
+                    method: "post",
+                    data: vm
+                })
+                .done(function () {
+                    console.log("done");
+                })
+                .fail(function () {
+
+                })
+            })
         });
     </script>
 }
